cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloud formation template that creates a stack of MySQL RDS Database. A fleet of ec2 instances managed
Parameters:
  MyVPC:
    Description: Select default vpc
    Type: AWS::EC2::VPC::Id
  MyKeyPair:
    Description: select Keypair name for SSH
    Type: AWS::EC2::KeyPair::KeyName
  MySubnets:
    Description: Select Subnet
    Type: List<AWS::EC2::Subnet::Id>
Resources:
  RDSSecurityGroup:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      DBSecurityGroupIngress:
        - EC2SecurityGroupId: !GetAtt WebServerSecurityGroup.GroupId # Required
      EC2VpcId: !Ref MyVPC
      GroupDescription: Allow traffic through port 3306 (MySQL) # Required
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow traffic through port 22 and 80 # Required
      GroupName: WebserverSG
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId: !Ref MyVPC
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow traffic through port 80 # Required
      GroupName: AlBSG
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId: !Ref MyVPC
  MyDB:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: false
      BackupRetentionPeriod: 0
      DBInstanceClass: db.t2.micro
      DBInstanceIdentifier: phonebookdb
      DBName: clarusway_phonebook
      DBSecurityGroups:
        - !Ref RDSSecurityGroup
      Engine: MySQL
      EngineVersion: 8.0.28
      MasterUserPassword: awsdevops
      MasterUsername: admin
      Port: 3306
      PubliclyAccessible: true 
  MyALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Name: phonebookalb
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets: !Ref MySubnets
      Type: application 
  HttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - TargetGroupArn: !Ref MyTG
          Type: forward
      LoadBalancerArn: !Ref MyALB # Required
      Port: 80
      Protocol: HTTP
  MyTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthyThresholdCount: 2
      IpAddressType: ipv4
      Name: MyTargetGroup
      Port: 80
      Protocol: HTTP
      TargetType: instance
      UnhealthyThresholdCount: 3
      VpcId: !Ref MyVPC 
  MyLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: phonebooklt
      LaunchTemplateData:
        ImageId: ami-0dfcb1ef8550277af
        InstanceType: t2.micro
        KeyName: !Ref MyKeyPair
        SecurityGroupIds:
          - !GetAtt WebServerSecurityGroup.GroupId
        TagSpecifications:
         - ResourceType: instance
           Tags:
            - Key: Name 
              Value: !Sub Phonebook Web Server - ${AWS::StackName}
        UserData: 
          Fn::Base64:
              !Sub 
                - |
                  #! /bin/bash
                  yum update -y
                  yum install python3 -y
                  pip3 install flask
                  pip3 install flask_mysql
                  echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
                  TOKEN="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"
                  FOLDER="https://raw.githubusercontent.com/oreadebit/Phonebook_app/main"
                  curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"/templates/index.html
                  curl -s --create-dirs -o "/home/ec2-user/templates/add-update.html" -L "$FOLDER"/templates/add-update.html
                  curl -s --create-dirs -o "/home/ec2-user/templates/delete.html" -L "$FOLDER"/templates/delete.html
                  curl -s --create-dirs -o "/home/ec2-user/app.py" -L "$FOLDER"/phonebook-app.py
                  python3 /home/ec2-user/app.py
                - MyDBURI: !GetAtt MyDB.Endpoint.Address
  MyASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: phonebookasg
      AvailabilityZones:
        !GetAZs "" 
      DesiredCapacity: 2     
      HealthCheckGracePeriod: 300
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref MyLT
        Version: !GetAtt MyLT.LatestVersionNumber
      MaxSize: 3 # Required
      MinSize: 1 # Required
      TargetGroupARNs:
        - !Ref MyTG

Outputs:   
   DNSName:
    Description: ALB Public Endpoint
    Value: !Sub 
      - http://${ALBDNS}
      - ALBDNS: !GetAtt MyALB.DNSName
